--- a/src/App.css
+++ b/src/App.css
@@ -91,6 +91,12 @@ img {
 
 /* =================================== REUSABLE CSS ============================ */
 
+.container {
+    max-width: 1140px;
+    margin-inline: auto;
+    padding-inline: 15px;
+}
+
 .grid {
     display: grid;
     gap: 30px;
@@ -98,6 +104,18 @@ img {
 
 .section {
     padding-block: 70px;
+}
+
+.section_title {
+    font-size: var(--big-font-size);
+    font-weight: var(--weight-800);
+    text-align: center;
+    margin-bottom: 70px;
+
+}
+
+.section_title span {
+    color: var(--first-color);
 }
 
 .button {
