--- a/src/Pages/Portfolio/portfolio.css
+++ b/src/Pages/Portfolio/portfolio.css
@@ -83,7 +83,7 @@
 
  .model_list {
     grid-template-columns: repeat(2, 1fr);
-    row-gap: 10px;
+    row-gap: 10px !important;
     margin-bottom: 24px;
 }
 
