added CSS element for Animation

--- a/src/App.css
+++ b/src/App.css
@@ -64,6 +64,9 @@
 }
 
 /* ================================== BASE ================================== */
+:root{
+    overflow-x: hidden;
+}
 
 * {
     margin: 0;
