--- a/src/Pages/Home/home.css
+++ b/src/Pages/Home/home.css
@@ -3,6 +3,8 @@
     align-items: center;
     padding: 40px;
     height: 100vh;
+    scroll-behavior: smooth;
+    overflow: hidden;
 }
 
 .home_img {
@@ -11,6 +13,9 @@
     border-radius: 30px;
     box-shadow: 0 0 8px hsla(0, 0%, 0%, 0.3);
     z-index: 1;
+    opacity: 0;
+    animation: slideProfileImg 0.7s ease forwards;
+    animation-delay: 0.1s;
 }
 
 .home_data {
@@ -24,6 +29,8 @@
     font-size: var(--h1-font-size);
     line-height: 1.24;
     padding-left: 70px;
+    animation: slideTitleDown 0.7s ease forwards;
+    animation-delay: 0.1s;
 }
 
 .home_title span {
@@ -44,6 +51,8 @@
 .home_description {
     line-height: 2.125;
     margin-block: 16px 32px;
+    animation: slideDescriptionLeft 0.7s ease backwards;
+    animation-delay: 0.1s;
 }
 
 .color_block {
@@ -54,4 +63,68 @@
     top: -50%;
     left: -83%;
     transform: rotate(-15deg);
+}
+
+.home_btn {
+    animation: slideButtonRight 0.7s ease forwards;
+    animation-delay: 0.1s;
+}
+
+.button_icon {
+    animation: rotateIcon 0.6s ease forwards;
+    animation-delay: 0.3s;
+}
+
+@keyframes slideProfileImg {
+    0% {
+        transform: translateY(-100px);
+        opacity: 1;
+    }
+    100% {
+        transform: translateY(0);
+        opacity: 1;
+    }
+
+}
+
+@keyframes slideTitleDown {
+    0% {
+        transform: translateY(-100px);
+        opacity: 0;
+    }
+    100% {
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
+@keyframes slideButtonRight {
+    0% {
+        transform: translateX(-100px);
+        opacity: 1;
+    }
+    100% {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+
+@keyframes rotateIcon {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes slideDescriptionLeft {
+    0% {
+        transform: translateX(100px);
+        opacity: 1;
+    }
+    100% {
+        transform: translateX(0);
+        opacity: 1;
+    }
 }
